--- a/test.html
+++ b/test.html
@@ -5,8 +5,8 @@
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link href='http://fonts.googleapis.com/css?family=Didact+Gothic&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Scada:400italic,700italic,400,700|Comfortaa:400,300,700&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
-        <script src="js/jquery.js"></script>
-        <script src="js/engine.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
+        <script src="js/engine.js" type="text/javascript"></script>
         <!--[if lt IE 9]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
@@ -14,7 +14,7 @@
     <body>
         <div id="wrapper">
             <header>
-                <a href="#" class="logo"></a>
+                <a href="#" class="logo"><div class="logo_upon"></div></a>
                 <div class="about">
                     <b>skywin</b> - это маленький сетевой проект, в котором мы сделали обзор очень интересных и полезных порталов для вэб-разработчиков.
                 </div>
@@ -23,7 +23,7 @@
                 <div class="item">
                     <a href="#">
                         <div class="title">
-                            <span>Anton's Shevchuk Blog</span>
+                            <span>Anton's Shevchuk Blog fdgkjdfkj jdbskbj </span>
                         </div>
                         <img src="content/antons.png" alt="">
                     </a>
